--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,90 @@
-.App {
-  text-align: center;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main-container {
+  background-color: #4158d0;
+  background-image: linear-gradient(
+    43deg,
+    #4158d0 0%,
+    #c850c0 46%,
+    #ffcc70 100%
+  );
+  height: 100vh;
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  overflow: hidden;
 }
 
-.App-link {
-  color: #61dafb;
+.container::before,
+.container::after {
+  content: "";
+  position: absolute;
+  /* z-index: 999; */
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  background-color: #4158d0;
+  opacity: 0.2;
+  animation: moveCircles 2s infinite ease-in-out;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* Using ::before and ::after for two circles */
+.container::before {
+  top: 0%;
+  left: 50%;
+}
+
+.container::after {
+  top: 48%;
+  right: -2%;
+}
+
+/* Additional circles using nth-child styling */
+.container .circle {
+  position: absolute;
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  opacity: 0.2;
+  animation: moveCircles 10s infinite ease-in-out;
+}
+
+ .container .circle:nth-child(1) {
+  bottom: 0%;
+  left: 5%;
+  background-color: #ffcc70;
+}
+
+/* .container .circle:nth-child(2) {
+  top: 10%;
+  left: 90%;
+  background-color: #4158d0;
+}
+
+.container .circle:nth-child(3) {
+  top: 70%;
+  left: 90%;
+  background-color: #4158d0;
+}  */
+
+/* Animation for floating effect */
+ @keyframes moveCircles {
+  0%,
+  100% {
+    transform: translateY(0);
   }
-  to {
-    transform: rotate(360deg);
+  50% {
+    transform: translateY(-10px);
   }
+} 
+
+.fade-in {
+  /* opacity: 0; */
+  animation: fadeIn 1.5s forwards; /* Controls fade-in duration */
 }
